# batteryarchive-agent

./: .gitignore  README.md  pyproject.toml
batteryarchive_agent/: ezbatt.py  flowStack.py  lithiumCell.py  matlab.py
scripts/: abstractCell.py  abstractFileType  abstractFileType.py  abstractModule.py  abstraction.py  arbin  arbin.py  combine_scripts_agent.py  data_import_agent.py  ezbatt.py  flowCell.py  importer  importer.py  li_data_import_agent.py  lithiumCell  lithiumCell.py  lithiumModule.py  mapper.yaml  matlab  matlab.py  quality_check.py  stack_data_import_agent.py  uconn.py  wip.py
src/batteryarchive_agent/: __init__.py  abstractModule.py  arbin.py  flowCell.py  flowStack.py  lithiumCell.py  lithiumModule.py  maccor.py  matlab.py  uconn.py
